--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,22 @@
 {
     "name": "php-ai/php-ml",
+    "type": "library",
     "description": "PHP Machine learning library",
     "license": "MIT",
+    "keywords": ["machine learning","pattern recognition","computational learning theory","artificial intelligence"],
+    "homepage": "https://github.com/php-ai/php-ml",
     "authors": [
         {
             "name": "Arkadiusz Kondas",
             "email": "arkadiusz.kondas@gmail.com"
         }
     ],
-    "require": {},
+    "config": {
+        "bin-dir": "bin"
+    },
+    "require": {
+        "php": ">=5.5.0"
+    },
     "require-dev": {
         "phpunit/phpunit": "^5.2"
     }
