change autoloader to psr-0

--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
         }
     ],
     "autoload": {
-        "psr-4": {
-            "": "src/"
+        "psr-0": {
+            "Phpml": "src/"
         }
     },
     "config": {
