--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "php-ai/php-ml",
     "type": "library",
-    "description": "PHP Machine Learning library",
+    "description": "PHP-ML - Machine Learning library for PHP",
     "license": "MIT",
     "keywords": ["machine learning","pattern recognition","computational learning theory","artificial intelligence"],
     "homepage": "https://github.com/php-ai/php-ml",
@@ -21,5 +21,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^5.2"
+    },
+    "config": {
+        "bin-dir": "bin"
     }
 }
