--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,15 +3,19 @@ pages:
   - Home: index.md
   - Machine Learning:
     - Classification:
+      - SVC: machine-learning/classification/svc.md
       - KNearestNeighbors: machine-learning/classification/k-nearest-neighbors.md
       - NaiveBayes: machine-learning/classification/naive-bayes.md
     - Regression:
       - LeastSquares: machine-learning/regression/least-squares.md
+      - SVR: machine-learning/regression/svr.md
     - Clustering:
       - KMeans: machine-learning/clustering/k-means.md
       - DBSCAN: machine-learning/clustering/dbscan.md
     - Cross Validation:
       - RandomSplit: machine-learning/cross-validation/random-split.md
+    - Feature Extraction:
+      - Token Count Vectorizer: machine-learning/feature-extraction/token-count-vectorizer.md
     - Datasets:
       - Array Dataset: machine-learning/datasets/array-dataset.md
       - CSV Dataset: machine-learning/datasets/csv-dataset.md
