--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ install:
 
 before_script:
   - if [[ $HHVMPHP7 == "yes" ]]; then echo hhvm.php7.all=1 >> /etc/hhvm/php.ini; fi
+  - if [[ $HHVMPHP7 == "yes" ]]; then sudo service hhvm restart ; sleep 1 ; fi
 
 script:
   - bin/phpunit
