--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,6 @@ matrix:
     - os: linux
       php: '7.0'
 
-    - os: linux
-      php: hhvm
-
     - os: osx
       osx_image: xcode7.3
       language: generic
@@ -26,5 +23,4 @@ install:
   - php composer.phar install --dev --no-interaction --ignore-platform-reqs
 
 script:
-  - if [[ "${TRAVIS_PHP_VERSION}" = "hhv*" ]]; then php -d hhvm.php7.all=1 bin/phpunit ; fi
-  - if [[ "${TRAVIS_PHP_VERSION}" = "php*" ]]; then bin/phpunit ; fi
+  - bin/phpunit
