--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ matrix:
     - os: linux
       php: '7.0'
 
+    - os: linux
+      php: '7.1'
+
     - os: osx
       osx_image: xcode7.3
       language: generic
