--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "php": ">=7.0.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0"
+        "phpunit/phpunit": "^6.0",
+        "friendsofphp/php-cs-fixer": "^2.4"
     },
     "config": {
         "bin-dir": "bin"
