--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ matrix:
     - os: linux
       php: '7.1'
 
+    - os: linux
+      php: '7.2'
+
     - os: osx
       osx_image: xcode7.3
       language: generic
