--- a/easy-coding-standard.neon
+++ b/easy-coding-standard.neon
@@ -1,14 +1,8 @@
 includes:
     - vendor/symplify/easy-coding-standard/config/psr2.neon
-    - vendor/symplify/easy-coding-standard/config/php70.neon
+    - vendor/symplify/easy-coding-standard/config/php71.neon
     - vendor/symplify/easy-coding-standard/config/clean-code.neon
-    - vendor/symplify/easy-coding-standard/config/common/array.neon
-    - vendor/symplify/easy-coding-standard/config/common/docblock.neon
-    - vendor/symplify/easy-coding-standard/config/common/namespaces.neon
-    - vendor/symplify/easy-coding-standard/config/common/control-structures.neon
-
-    # many errors, need help
-    #- vendor/symplify/easy-coding-standard/config/common/strict.neon
+    - vendor/symplify/easy-coding-standard/config/common.neon
 
 checkers:
     # spacing
@@ -33,13 +27,16 @@ checkers:
     - Symplify\CodingStandard\Fixer\Import\ImportNamespacedNameFixer
     - Symplify\CodingStandard\Fixer\Php\ClassStringToClassConstantFixer
     - Symplify\CodingStandard\Fixer\Property\ArrayPropertyDefaultValueFixer
-    - Symplify\CodingStandard\Fixer\ClassNotation\PropertyAndConstantSeparationFixer
     - Symplify\CodingStandard\Fixer\ArrayNotation\StandaloneLineInMultilineArrayFixer
 
 parameters:
     exclude_checkers:
         # from strict.neon
         - PhpCsFixer\Fixer\PhpUnit\PhpUnitStrictFixer
+        - PhpCsFixer\Fixer\Strict\StrictComparisonFixer
+        # personal prefference
+        - PhpCsFixer\Fixer\Operator\NotOperatorWithSuccessorSpaceFixer
+
     skip:
         PhpCsFixer\Fixer\Alias\RandomApiMigrationFixer:
             # random_int() breaks code
@@ -47,6 +44,15 @@ parameters:
         SlevomatCodingStandard\Sniffs\Classes\UnusedPrivateElementsSniff:
             # magic calls
             - src/Phpml/Preprocessing/Normalizer.php
+        PhpCsFixer\Fixer\StringNotation\ExplicitStringVariableFixer:
+            # bugged
+            - src/Phpml/Classification/DecisionTree/DecisionTreeLeaf.php
+        Symplify\CodingStandard\Fixer\Commenting\RemoveUselessDocBlockFixer:
+            # bug in fixer
+            - src/Phpml/Math/LinearAlgebra/LUDecomposition.php
+        PhpCsFixer\Fixer\FunctionNotation\VoidReturnFixer:
+            # covariant return types
+            - src/Phpml/Classification/Linear/Perceptron.php
 
     skip_codes:
         # missing typehints
@@ -56,3 +62,4 @@ parameters:
         - SlevomatCodingStandard\Sniffs\TypeHints\TypeHintDeclarationSniff.MissingTraversableReturnTypeHintSpecification
         - SlevomatCodingStandard\Sniffs\TypeHints\TypeHintDeclarationSniff.MissingPropertyTypeHint
         - SlevomatCodingStandard\Sniffs\TypeHints\TypeHintDeclarationSniff.MissingTraversablePropertyTypeHintSpecification
+        - PHP_CodeSniffer\Standards\Generic\Sniffs\CodeAnalysis\AssignmentInConditionSniff.Found
