--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_install:
 install:
   - if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then /usr/bin/env bash bin/handle_brew_pkg.sh "${_PHP}" ; fi
   - curl -s http://getcomposer.org/installer | php
-  - php composer.phar install --dev --no-interaction --ignore-platform-reqs
+  - php composer.phar install --no-interaction --ignore-platform-reqs
 
 script:
   - vendor/bin/phpunit $PHPUNIT_FLAGS
