--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "symplify/easy-coding-standard": "^3.1"
     },
     "config": {
+        "preferred-install": "dist",
         "sort-packages": true
     },
     "autoload": {
