Update coveralls phar

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,6 @@ script:
 after_success:
   - |
     if [[ $PHPUNIT_FLAGS != "" ]]; then
-      wget https://github.com/satooshi/php-coveralls/releases/download/v1.0.1/coveralls.phar;
+      wget https://github.com/php-coveralls/php-coveralls/releases/download/v2.0.0/php-coveralls.phar
       php coveralls.phar --verbose;
     fi
