--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ matrix:
     - os: linux
       php: '7.2'
       env: PHPUNIT_FLAGS="--coverage-clover build/logs/clover.xml"
+      
+    - os: linux
+      php: '7.3'
 
     - os: osx
       osx_image: xcode7.3
