--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,9 @@ matrix:
 
   include:
     - os: linux
-      php: '7.1'
-      env: DISABLE_XDEBUG="true" STATIC_ANALYSIS="true"
-
-    - os: linux
       php: '7.2'
-      env: PHPUNIT_FLAGS="--coverage-clover build/logs/clover.xml"
-      
+      env: PHPUNIT_FLAGS="--coverage-clover build/logs/clover.xml" DISABLE_XDEBUG="true" STATIC_ANALYSIS="true"
+
     - os: linux
       php: '7.3'
 
