--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,9 @@
     },
     "require-dev": {
         "phpbench/phpbench": "^0.16.0",
-        "phpstan/phpstan-phpunit": "^0.11",
-        "phpstan/phpstan-shim": "^0.11",
-        "phpstan/phpstan-strict-rules": "^0.11",
+        "phpstan/phpstan-phpunit": "^0.12",
+        "phpstan/phpstan": "^0.12",
+        "phpstan/phpstan-strict-rules": "^0.12",
         "phpunit/phpunit": "^8.0",
         "symplify/easy-coding-standard": "^6.0"
     },
